--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Amir Salem, MD | Trusted Vascular Specialist</title>
+    <meta name="google-site-verification" content="f8ebPTRmVc0WRZc3Ly_GvZuoEKmpjuzyCpBgbtc_ZQQ" />
+<title>Dr. Amir Salem, MD | Trusted Vascular Specialist for Vein & Knee Pain</title>
+<meta name="description" content="Dr. Amir Salem, MD is a board-certified vascular specialist providing advanced, minimally invasive treatment for vein disease, circulation disorders, and knee-related vascular pain in New York. Book a consultation today.">
+<meta name="keywords" content="Dr. Amir Salem MD, vascular specialist New York, vein treatment NYC, knee pain vascular specialist, varicose veins treatment, spider veins, peripheral artery disease PAD, circulation problems, minimally invasive vascular procedures">
+<meta name="author" content="Dr. Amir Salem, MD">
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Open Graph / Social Sharing -->
+<meta property="og:title" content="Dr. Amir Salem, MD | Expert Vascular Care for Vein & Knee Pain">
+<meta property="og:description" content="Trusted vascular specialist offering modern, minimally invasive treatments for vein disease, circulation issues, and knee-related vascular pain. Located in New York.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://dr-amir-salem-md.github.io/index/">
+<meta property="og:site_name" content="Vein & Knee Pain Vascular Group">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Dr. Amir Salem, MD | Vascular Specialist in New York">
+<meta name="twitter:description" content="Advanced outpatient vascular care for vein disease, circulation disorders, and knee pain with minimal downtime.">
+
+<!-- Canonical URL -->
+<link rel="canonical" href="https://dr-amir-salem-md.github.io/index/">
     
     <link rel="icon" type="image/png" href="vein and knee favicon.png">
     
@@ -266,4 +287,5 @@
     </footer>
 
 </body>
+
 </html>
